--- a/Product landing page/index.html
+++ b/Product landing page/index.html
@@ -19,9 +19,10 @@
 
 <nav id="nav-bar">
   <ul>
-    <li><a class="nav-link" href="#shop">Shop Now</a></li>
+    <li><a class="nav-link" href="#hero">Hero</a></li>
     <li><a class="nav-link" href="#sale">On Sale</a></li>
     <li><a class="nav-link" href="#gallery">Gallery</a></li>
+    <li><a class="nav-link" href="#newsletter">Newsletter</a></li>
   </ul>
 </nav>
 
@@ -29,14 +30,15 @@
 
 
 <body>
-  <div id="shop" class="flex-container">
+  <div id="hero" class="flex-container">
+    
     <div class="box1">
-      <h2>Limited offer!</h2> 
+      <h2>Step Into Style Before It’s Gone! Shop Our<span id="limited"> Limited-Time Collection</span> and Discover Unbeatable Deals on Fashion That’ll Elevate Your Look. Hurry—<span id="fomo">Once It’s Gone, It’s Gone!</span></h2> 
     </div> 
 
     <div class="box2">  
 
-    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/EzaGEx80dJQ?si=OSntvlxRBLHsEuob?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/EzaGEx80dJQ?si=OSntvlxRBLHsEuob" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 
@@ -55,24 +57,30 @@
   </div>
 
   <div id="newsletter">
+    <div>
+      <h1> sign up to our newsletter to be updated with the latest trends!<h1>
+      </div>
+
+      <div>
 
     <form id="form" action="https://www.freecodecamp.com/email-submit">
       <!--add additional inputs-->
       <input id="email" placeholder="abc123@gmail.com" type="email" name="email"></input>
       <input id="submit" type="submit"></input>
-          
+      </div> 
     </form>
   </div>
 
 
 </body>
-
+<hr>
 <footer>
   <ul>
     <li>Privacy</li>
     <li>Terms</li>
     <li>Support</li>
   </ul>
+  
   <p>Copyright 2025, Original XD Designs</p>
 </footer>
 
