--- a/Technical documentation/index.html
+++ b/Technical documentation/index.html
@@ -182,7 +182,7 @@ statement_last; }</code>
 statement_2_runs_if_condition_is_true; } else {
 statement_3_runs_if_condition_is_false;
 statement_4_runs_if_condition_is_false; }</code>
-        <p>It is advisable to not use simple assignments in a conditional expression, because the assignment can be confused with equality when glancing over the code. For example, do not use the following code:/p>
+        <p>It is advisable to not use simple assignments in a conditional expression, because the assignment can be confused with equality when glancing over the code. For example, do not use the following code:</p>
           <code>if (x = y) { /* statements here */ }</code>
         <p>If you need to use an assignment in a conditional expression, a common practice is to put additional parentheses around the assignment. For example:</p>
           <code>if ((x = y)) { /* statements here */ }</code>
